--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "titleBar.activeBackground": "#334431",
         "titleBar.activeForeground": "#FBFCFB"
     },
-    "eslint.enable": false
+    "eslint.enable": false,
+    "python.pythonPath": "C:\\Python38\\python.exe"
 }
