--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "cloudinary": "^1.23.0",
         "cloudinary-cli": "^1.1.2",
+        "cloudinary-react": "^1.6.8",
         "knex": "<0.20.0",
         "sqlite3": "latest",
         "strapi": "3.3.4",
