--- a/backend/plugins/cloudinary/.editorconfig
+++ b/backend/plugins/cloudinary/.editorconfig
@@ -2,6 +2,11 @@ root = true
 
 [*]
 end_of_line = lf
+trim_trailing_whitespace = false
 insert_final_newline = false
 indent_style = space
 indent_size = 2
+
+[React, react, jsx]
+trim_trailing_whitespace = false
+insert_final_newline = false
