--- a/backend/package.json
+++ b/backend/package.json
@@ -13,22 +13,25 @@
     "dependencies": {
         "cloudinary": "^1.23.0",
         "cloudinary-cli": "^1.1.2",
+        "cloudinary-core": "^2.11.3",
         "cloudinary-react": "^1.6.8",
-        "knex": "<0.20.0",
-        "sqlite3": "latest",
-        "strapi": "3.3.4",
-        "strapi-admin": "3.3.4",
-        "strapi-connector-bookshelf": "3.3.4",
-        "strapi-generate-plugin": "^3.3.4",
-        "strapi-plugin-content-manager": "3.3.4",
-        "strapi-plugin-content-type-builder": "3.3.4",
-        "strapi-plugin-documentation": "3.3.4",
-        "strapi-plugin-email": "3.3.4",
-        "strapi-plugin-graphql": "3.3.4",
-        "strapi-plugin-upload": "3.3.4",
-        "strapi-plugin-users-permissions": "3.3.4",
-        "strapi-provider-upload-cloudinary": "^3.3.4",
-        "strapi-utils": "3.3.4"
+        "knex": "^0.21.14",
+        "sqlite3": "^5.0.0",
+        "strapi": "3.4.0",
+        "strapi-admin": "3.4.0",
+        "strapi-connector-bookshelf": "3.4.0",
+        "strapi-generate": "^3.4.0",
+        "strapi-generate-plugin": "^3.4.0",
+        "strapi-plugin-content-manager": "3.4.0",
+        "strapi-plugin-content-type-builder": "3.4.0",
+        "strapi-plugin-documentation": "3.4.0",
+        "strapi-plugin-email": "3.4.0",
+        "strapi-plugin-graphql": "3.4.0",
+        "strapi-plugin-upload": "3.4.0",
+        "strapi-plugin-users-permissions": "3.4.0",
+        "strapi-provider-upload-cloudinary": "3.4.0",
+        "strapi-utils": "3.4.0",
+        "strapi-plugin-upload-cloudinary": "file:plugins/upload-cloudinary"
     },
     "author": {
         "name": "A Strapi developer"
@@ -38,7 +41,7 @@
     },
     "engines": {
         "node": ">=10.16.0 <=14.x.x",
-        "npm": ">=6.0.0"
+        "npm": ">=6.14.8"
     },
     "license": "MIT"
 }
